--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="#">
                     <div class="inputs">疯狂抢500元红包！</div>
                     <i>
-                        <img src="./img/fangdajing.png" alt="">
+                        <!-- <img src="./img/fangdajing.png" alt=""> -->
                     </i>
                 </a>
             </div>
